changed put to patch method for update users
